# rckive-genpdf-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.ci  README.md
.builds/: archlinux-msrv.yml  archlinux.yml
.githooks/pre-commit/: 01-build.yaml
.githooks/pre-commit/02-checks/: check.yaml  clippy.yaml  fmt.yaml  test.yaml
.github/: renovate.json
.github/workflows/: accept-pdf-diffs.yml  checks.yml  publish-crates.yml  runner-ci-docker.yml
.reuse/: dep5
examples/: demo.rs  images.rs  minimal.rs
examples/images/: test_image.bmp.license
src/: elements.rs  error.rs  fonts.rs  lib.rs  render.rs  style.rs  wrap.rs
src/elements/: images.rs
tests/: pdf.rs
