[package]
authors = ["Martijn Arts <martijn@rckive.com>", "Robin Krahl <robin.krahl@ireas.org>"]
categories = ["text-processing"]
description = "User-friendly PDF generator written in pure Rust"
documentation = "https://docs.rs/genpdf"
edition = "2021"
exclude = [".builds/*"]
homepage = "https://github.com/RCKIVE/rckive-genpdf-rs"
keywords = ["pdf", "text", "layout"]
license = "Apache-2.0 OR MIT"
name = "rckive-genpdf"
readme = "README.md"
repository = "https://github.com/RCKIVE/rckive-genpdf-rs"
version = "0.2.0"

[[example]]
name = "images"
required-features = ["images"]

[dependencies]
derive_more = {version = "0.99", default-features = false, features = ["add", "add_assign", "from", "into", "mul", "mul_assign", "sum"]}
hyphenation = {version = "0.8", optional = true}
lopdf = "0.29"
printpdf = {version = "0.5.3", default-features = false}
rusttype = "0.9"
ttf-parser = "0.17.1"

[dev-dependencies]
float-cmp = {version = "0.9", default-features = false, features = ["std"]}
hyphenation = {version = "0.8", features = ["embed_en-us"]}

[features]
default = []
images = ["printpdf/embedded_images"]
pdf_comparison_tests = ["images"]

[package.metadata.docs.rs]
all-features = true
