[package]
authors = ["Martijn Arts <martijn@rckive.com>", "Robin Krahl <robin.krahl@ireas.org>"]
categories = ["text-processing"]
description = "User-friendly PDF generator written in pure Rust"
documentation = "https://docs.rs/genpdf"
edition = "2021"
exclude = [".builds/*"]
homepage = "https://github.com/RCKIVE/rckive-genpdf-rs"
keywords = ["pdf", "text", "layout"]
license = "EUPL-1.2"
name = "rckive-genpdf"
readme = "README.md"
repository = "https://github.com/RCKIVE/rckive-genpdf-rs"
version = "0.4.0"

[[example]]
name = "images"
required-features = ["images"]

[dependencies]
derive_more = {version = "0.99", default-features = false, features = ["add", "add_assign", "from", "into", "mul", "mul_assign", "sum"]}
hyphenation = {version = "0.8", optional = true}
lopdf = {default-features = false, features = ["pom_parser"], version = "0.31"}
printpdf = {version = "0.5.3", default-features = false}
rusttype = "0.9"
ttf-parser = "0.12.3"

[dev-dependencies]
float-cmp = {version = "0.9", default-features = false, features = ["std"]}
hyphenation = {version = "0.8", features = ["embed_en-us"]}

[features]
default = []
images = ["printpdf/embedded_images"]
pdf_comparison_tests = ["images"]

[package.metadata.docs.rs]
all-features = true
